# potal

./: ProjectHome.md  README  TODO  card.c  client.c  client.h  config.h  configure  constant.h  gui.c  gui.h  mutex.h  parse.c  server.c
autom4te.cache/: output.1  output.2  requests  traces.1
branches/branches-r12-net/: Makefile.in  card.c  client.c  client.h  config.status  gui.c  gui.h  logger.h  parse.c  server.c  typedef.h
branches/branches-r12-net/autom4te.cache/: requests  traces.2
trunk/: Makefile.am  Makefile.in  card.h  client.c  client.h  config.h  config.h.in  config.status  configure  configure.ac  gui.c  parse.c  parse.h  server.c
trunk/autom4te.cache/: output.0  traces.0  traces.1
